--- a/trivia-front/src/pages/Landing/Landing.module.scss
+++ b/trivia-front/src/pages/Landing/Landing.module.scss
@@ -1,7 +1,10 @@
+@import "../../Styles/pallette.module.scss";
+
 .container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   width: 100vw;
+  background-color: $purp-bg;
 }
