--- a/trivia-front/src/containers/LoginModal/LoginModal.module.scss
+++ b/trivia-front/src/containers/LoginModal/LoginModal.module.scss
@@ -1,3 +1,5 @@
+@import "../../Styles/pallette.module.scss";
+
 .cont {
   position: fixed;
   top: 0;
@@ -8,11 +10,11 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.2);
-  color: black;
+  color: white;
   &__main {
-    width: 35vw;
-    height: 50vh;
-    background-color: #e5dac9;
+    width: 80vw;
+    height: 70vh;
+    background-color: $accent-purp;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -46,15 +48,15 @@
           font-size: 18px;
           border-radius: 5px;
           border: none;
-          background-color: #e5dac9;
+          background-color: $accent-grey;
           box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
           padding: 4px;
           transition: all 0.1s ease-in-out;
           &:hover {
-            background-color: #c5b7a1;
+            background-color: $accent-grey-hover;
           }
           &:focus {
-            background-color: #c5b7a1;
+            background-color: $accent-grey-hover;
             outline: none;
           }
         }
