--- a/trivia-front/src/containers/Navigation/Navigation.module.scss
+++ b/trivia-front/src/containers/Navigation/Navigation.module.scss
@@ -1,8 +1,12 @@
+@import "../../Styles/pallette.module.scss";
+
 .nav {
-  width: 40vw;
+  width: 100vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 15vh;
   margin: 0 auto;
+  background-color: $accent-purp;
+  border-radius: 0 0 10px 10px;
 }
