--- a/trivia-front/src/pages/Profile/Profile.module.scss
+++ b/trivia-front/src/pages/Profile/Profile.module.scss
@@ -1,18 +1,20 @@
+@import "../../Styles/pallette.module.scss";
+
 .cont {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   height: 85vh;
   color: black;
-  width: 33vw;
+  width: 90vw;
   &__head {
-    font-size: 24px;
+    font-size: 22px;
     font-weight: 500;
     margin: 10px;
   }
   &__para {
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 400;
     margin: 1rem;
   }
@@ -22,4 +24,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.sec {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  width: 45vw;
+  text-align: center;
+  background-color: $accent-light-purp;
+  margin: 10px;
+  border-radius: 12px;
 }
